--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -10,3 +10,11 @@ jobs:
     steps:
     - run: echo "Step 1 complete!"
     - run: echo "Step 2 complete!"
+  job2:
+    runs-on: ubuntu-latest
+    needs: job1
+    steps:
+    - uses: mscoutermarsh/cowsays-action@master
+      with:
+        text: 'Ready for prod–ship it!'
+        color: 'magenta'
